# saas-app

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  .pre-commit-ignore  Dockerfile  Dockerfile.app  README.md  docker-compose.yaml  entrypoint.sh  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: main.yaml  setup-python-node-neon.yaml  tests.yaml
.github/workflows/old_yamls/: 1-test-django-basic.yaml  2-test-django-env-vars.yaml  3-test-django-secrets.yaml  4-test-django-branch-db.yaml  5-django-test-with-worker-processes.yaml  hello-world.yaml  setup-python-node-neon.yaml
enhancements/: README.md
src/auth/: views.py
src/checkouts/: views.py
src/commander/: apps.py  tests.py
src/customers/: models.py
src/customers/migrations/: 0001_initial.py  0002_customer_init_email_customer_init_email_confirmed.py
src/dashboard/: views.py
src/helpers/: billing.py  currency_utils.py  date_utils.py  downloader.py  number_utils.py
src/landing/: views.py
src/myproject/: forms.py  settings.py  urls.py  views.py
src/profiles/: urls.py  views.py
src/subscriptions/: admin.py  models.py  utils.py  views.py
src/subscriptions/migrations/: 0001_initial.py  0002_alter_subscription_options.py  0002_subscription_active.py  0003_rename_permission_subscription_permissions.py  0004_usersubscription.py  0005_subscription_stripe_id.py  0006_subscriptionprice.py  0007_subscriptionprice_featured_subscriptionprice_order.py  0008_subscriptionprice_timestamp_and_more.py  (+12 more)
src/templates/: base.html  home.html  old.html
src/visits/: models.py
(+32 files in other folders)
