[tool.poetry]
name = "saas-app"
version = "0.1.0"
description = "A Django based SaaS app incorporating, Stripe, with db hosting on Neon and deployment on Railway"
authors = ["Ugo Okoroafor <39538470+Uokoroafor@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
gunicorn = "^23.0.0"
python-decouple = "^3.8"
psycopg = {extras = ["binary"], version = "^3.2.3"}
dj-database-url = "^2.3.0"
requests = "^2.32.3"
types-requests = "^2.32.0.20241016"
whitenoise = "^6.8.2"
django-allauth = {extras = ["socialaccount"], version = "^65.3.0"}
django-allauth-ui = "^1.5.1"
django-widget-tweaks = "^1.5.0"
slippers = "^0.6.2"
stripe = "^11.3.0"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
